...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@drawable/gradient_background">

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:backgroundTint="#D97BF0"
        android:onClick="onSearchTownClick"
        android:text="@string/searchTownButton_text"
        android:textColor="@color/white"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="371dp"
        android:layout_height="510dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
