...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Location -->

    <TextView
        android:id="@+id/townNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="@color/white"
        android:text="@string/townName_text"
        android:textSize="23dp"
...
        android:layout_width="107dp"
        android:layout_height="85dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/description_picture_alternative_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <LinearLayout
        android:id="@+id/dayAfterNextDayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
...
