...
      android:layout_weight="1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/description"
      app:layout_constraintVertical_bias="0.0"/> -->

    <ImageView
        android:id="@+id/trashIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:clickable="true"
        android:contentDescription="@string/trash_icon_text"
        android:focusable="true"
        android:onClick="onTrashClick"
...
